syntax = "proto3";
package hello;

service HelloService {
  rpc getHello(HelloRequest) returns (HelloResult);
}

enum LoginCode {
  SUCCESS = 0;
  FAIL = 1;
};

message HelloResult {
  LoginCode loginCode = 1;
  optional string token = 2;
}

message HelloRequest {
  string username = 1;
  string password = 2;
}
